--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,13 @@
 
     <div class="instructions">
       <h1>Planet Sculptor</h1>
-      <p><strong>Left Click:</strong> Raise Terrain</p>
-      <p><strong>Right Click:</strong> Lower Terrain</p>
-      <p><strong>Middle Mouse Drag:</strong> Orbit Camera</p>
+      <p><strong>Orbit:</strong> Left-drag (mouse/trackpad)</p>
+      <p><strong>Pan:</strong> Right-drag or two-finger drag</p>
+      <p><strong>Zoom:</strong> Wheel or pinch</p>
+      <hr />
+      <p><strong>Sculpt (Raise):</strong> Ctrl + Left-drag</p>
+      <p><strong>Sculpt (Lower):</strong> Alt/Option + Left-drag</p>
+      <p style="opacity: 0.8">Works on macOS and Windows (Alt = Option on macOS)</p>
     </div>
     <div id="coords-display" class="coords">X: -- Y: -- Z: --</div>
   </body>
