Remove pan gesture

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interactive Planet Sculptor (Three.js)</title>
+    <title>Geocentric 🌎</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -11,15 +11,12 @@
     <script src="app.js"></script>
 
     <div class="instructions">
-      <h1>Planet Sculptor</h1>
+      <h1>Geocentric 🌎</h1>
       <p><strong>Orbit:</strong> Left-drag (mouse/trackpad)</p>
-      <p><strong>Pan:</strong> Right-drag or two-finger drag</p>
       <p><strong>Zoom:</strong> Wheel or pinch</p>
       <hr />
-      <p><strong>Sculpt (Raise):</strong> Ctrl + Left-drag</p>
-      <p><strong>Sculpt (Lower):</strong> Alt/Option + Left-drag</p>
-      <p style="opacity: 0.8">Works on macOS and Windows (Alt = Option on macOS)</p>
+      <p><strong>Raise:</strong> Ctrl + Left</p>
+      <p><strong>Lower:</strong> Alt/Option (⌥) + Left</p>
     </div>
-    <div id="coords-display" class="coords">X: -- Y: -- Z: --</div>
   </body>
 </html>
